--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search_light"/>
 
-    <EditText
+    <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/search_bar"
@@ -39,5 +39,34 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/bar"
         android:id="@+id/recycler_view"/>
+
+    <LinearLayout
+        android:id="@+id/tag_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bar"
+        android:layout_marginStart="15dp"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hash_tag"
+            android:text="#tag"
+            android:maxLines="1"
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_primary_dark"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/no_of_posts"
+            android:text="123 posts"
+            android:maxLines="1"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
