--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,6 +23,34 @@
         android:padding="10dp"
         android:id="@+id/username"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="end"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unavailable!"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:id="@+id/availability_username"
+            android:visibility="gone"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:text="CHECK"
+            android:layout_gravity="end"
+            android:layout_marginTop="5dp"
+            android:id="@+id/check_username"
+            android:textColor="@color/colorPrimary"/>
+
+    </LinearLayout>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
